kubernetes/traefik/config/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.efym.net`)
      kind: Rule
      # middlewares:
      #   - name: authelia
      #     namespace: authelia
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: efym-net-tls
